style/fix: scrollbar overflow on show

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 	font-weight: 400;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 img {
 	height: 100%;
 	width: 100%;
